grammar.js
    document: ($) =>
      seq(
        repeat(prec(10, choice($._blank_lines, $._comments))),
        choice(
          optional(
            seq(
              $.document_header,
              optional(seq($._blank_lines, $.document_body)),
            ),
          ),
          optional($.document_body),
        ),
      ),

    // ------------------------------------------------------------------------

    // Header
    //
    // 1. Document Title
    // 2. (optional) Comments
    // 3. (optional) Authors or Authors + (Comments) + Revision
    // 4. (optional) Document Attributes
    //
    document_body: ($) =>
      repeat1(
        choice(
          $._section,
          // alias(prec.right(repeat1($._block_not_section)), $.section),
          prec.right(repeat1($._block_not_section)),
        ),
      ),

    // ------------------------------------------------------------------------

    // Document Attributes
    // - https://docs.asciidoctor.org/asciidoc/latest/attributes/document-attributes/
    //
    // TODO:
    // - handling of incorrect attributes (e.g. missing last `:`)
    // - inline attributes `{...}`
    //
    // _attribute: ($) => choice($.attribute /*, $.no_attribute*/),
    element_attributes: ($) => $._attribute_list,

    // _attribute_list: (_) => token(seq("[", /[^\]\r\n]*/, "]", /\r?\n/)),

    _attribute_list: ($) =>
      seq(
        "[",
        optional(
          seq($._attribute_unparsed, repeat(seq(",", $._attribute_unparsed))),
        ),
        "]",
        // FIX: Problem: `[attribute]...` is recognized as an element_attribute,
        //      but should be an inline node.
        /[ \t]*/, // HACK: Workaround for `[attribute]...` / `[attribute] ...`
        $._newline,
      ),
    _section: ($) =>
      choice(
        $.part,
        $.section_level1,
        $.section_level2,
        $.section_level3,
        $.section_level4,
        $.section_level5,
      ),

    section_level3: ($) =>
      prec.right(
        seq(
          optional($.element_attributes),
          alias($.section_level3_header, $.section_header),
          repeat(
            choice(
              choice($.section_level4, $.section_level5),
              $._block_not_section,
            ),
          ),
        ),
      ),

    section_header_content: ($) => $.inline,

    // ------------------------------------------------------------------------

    _block_not_section: ($) =>
      prec.left(choice($._block_content, $.catch_unresolved)),

    _comments: ($) => prec.right(repeat1($.comment)),

    // One comment type
    title: ($) => seq(".", $._line_start_without_space),

    // ------------------------------------------------------------------------

    // Blocks
    //
    // TODO:
    // - Source Code Block as a special Listing Block with a language attribute
    // - Also Markdown ``` Source Code Block?
    //
    example_block: ($) => choice($._example_block, $._example_block_style),

    // Block style
    _example_block: ($) =>
      choice(
        $._example_block_level1,
        $._example_block_level2,
        $._example_block_level3,
        $._example_block_level4,
      ),

    // Level 1
    _example_block_style: ($) =>
      seq(
        alias($._example_attributes, $.element_attributes),
        $._newline,
        choice($.open_block, $.paragraph),
      ),
    paragraph: ($) => $._lines,

    // ------------------------------------------------------------------------

    // Lists
    // - https://docs.asciidoctor.org/asciidoc/latest/lists/unordered/
    //
    // TODO:
    // - [x] Identify a simple list line
    // - [x] Don't recognize `+**.*` as list marker
    // - [x] List with list items
    // - [ ] Nested list items context

    _lines: ($) => prec.right(repeat1($._line)),

    inline: ($) => repeat1($._char),

    _line_start_without_space: ($) =>
      seq(alias($._inline_start_without_space, $.inline), $._newline),
    _blank_lines: ($) => repeat1($._blank_line),
    _char: (_) => /[^\n]/,
