test/corpus/90_special_cases.txt
==================|||
Case 01
==================|||

Lorem ipsum.

==== Section Level 3 Header

---|||

(document
  (document_body
    (paragraph_context
      (paragraph
        (inline)))
    (section_level3
      (section_header
        (section_header_marker)
        (section_header_content
          (inline))))))

==================|||
Case 02
==================|||

.Hinweis: push-Error Konflikte lösen
[%collapsible]
====
=====
Lorem ipsum.
=====
====

---|||

(document
  (document_body
    (block_context
      (title
        (inline))
      (example_block
        (element_attributes)
        (example_block_marker_start)
        (block_context
          (example_block
            (example_block_marker_start)
            (paragraph_context
              (paragraph
                (inline)))
            (example_block_marker_end)))
        (example_block_marker_end)))))

==================|||
Case 03
==================|||

==== Section Level 3 Header

=======
Lorem ipsum.
=======

---|||

(document
  (document_body
    (section_level3
      (section_header
        (section_header_marker)
        (section_header_content
          (inline)))
      (block_context
        (example_block
          (example_block_marker_start)
          (paragraph_context
            (paragraph
              (inline)))
          (example_block_marker_end))))))

==================|||
Case 04
==================|||

==== Section Level 3 Header

====
Lorem ipsum.
====

---|||

(document
  (document_body
    (section_level3
      (section_header
        (section_header_marker)
        (section_header_content
          (inline)))
      (block_context
        (example_block
          (example_block_marker_start)
          (paragraph_context
            (paragraph
              (inline)))
          (example_block_marker_end))))))
